k8s/overlays/dev/frontend/deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  template:
    spec:
      containers:
        - name: front
